Adding cleaned concussion data as a csv

--- a/Clean_conc_data.ipynb
+++ b/Clean_conc_data.ipynb
@@ -831,10 +831,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Games_Missed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Patrice Bergeron</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Brad Marchand</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Shawn Thornton</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>CAR</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Chad LaRose</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>CAR</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Alexander Semin</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Season Team Position            Player  Games_Missed\n",
+       "0   2012  BOS        F  Patrice Bergeron             6\n",
+       "1   2012  BOS        F     Brad Marchand             2\n",
+       "2   2012  BOS        F    Shawn Thornton             2\n",
+       "3   2012  CAR        F       Chad LaRose            10\n",
+       "4   2012  CAR        F   Alexander Semin             2"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df = clean_df.rename(columns = {'Games Missed': 'Games_Missed'})\n",
+    "clean_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clean_df.to_csv('clean_concussion_data.csv')"
+   ]
   }
  ],
  "metadata": {
