--- a/Cleaning/Clean_conc_data.ipynb
+++ b/Cleaning/Clean_conc_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "4  170.731707             2               2  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "19  2012/13  Philadelphia        F     Simmonds, Wayne             3"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,166 +399,166 @@
        "      <th>Team</th>\n",
        "      <th>Position</th>\n",
        "      <th>Player</th>\n",
-       "      <th>Games_Missed</th>\n",
+       "      <th>Games Missed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>BOS</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Boston</td>\n",
        "      <td>F</td>\n",
        "      <td>Patrice Bergeron</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>BOS</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Boston</td>\n",
        "      <td>F</td>\n",
        "      <td>Brad Marchand</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>BOS</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Boston</td>\n",
        "      <td>F</td>\n",
        "      <td>Shawn Thornton</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>CAR</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Carolina</td>\n",
        "      <td>F</td>\n",
        "      <td>Chad LaRose</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>CAR</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Carolina</td>\n",
        "      <td>F</td>\n",
        "      <td>Alexander Semin</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>CAR</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Carolina</td>\n",
        "      <td>F</td>\n",
        "      <td>Jeff Skinner</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>CHI</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Chicago</td>\n",
        "      <td>D</td>\n",
        "      <td>Steve Montador</td>\n",
        "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>CBJ</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Columbus</td>\n",
        "      <td>D</td>\n",
        "      <td>James Wisniewski</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>DET</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Detroit</td>\n",
        "      <td>F</td>\n",
        "      <td>Patrick Eaves</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>EDM</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Edmonton</td>\n",
        "      <td>F</td>\n",
        "      <td>Ben Eager</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>FLA</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Florida</td>\n",
        "      <td>F</td>\n",
        "      <td>Eric Selleck</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>FLA</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Florida</td>\n",
        "      <td>D</td>\n",
        "      <td>Mike Weaver</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>MTL</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Montreal</td>\n",
        "      <td>F</td>\n",
        "      <td>René Bourque</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>MTL</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Montreal</td>\n",
        "      <td>F</td>\n",
        "      <td>Brendan Gallagher</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>MTL</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Montreal</td>\n",
        "      <td>D</td>\n",
        "      <td>Raphael Díaz</td>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>NYR</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>NY Rangers</td>\n",
        "      <td>F</td>\n",
        "      <td>Darroll Powe</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>OTT</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Ottawa</td>\n",
        "      <td>F</td>\n",
        "      <td>David Dziurzynski</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>OTT</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Ottawa</td>\n",
        "      <td>D</td>\n",
        "      <td>Mike Lundin</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>PHI</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Philadelphia</td>\n",
        "      <td>F</td>\n",
        "      <td>Daniel Brière</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>PHI</td>\n",
+       "      <td>2012/13</td>\n",
+       "      <td>Philadelphia</td>\n",
        "      <td>F</td>\n",
        "      <td>Wayne Simmonds</td>\n",
        "      <td>3</td>\n",
@@ -568,27 +568,27 @@
        "</div>"
       ],
       "text/plain": [
-       "   Season Team Position             Player  Games_Missed\n",
-       "0    2012  BOS        F   Patrice Bergeron             6\n",
-       "1    2012  BOS        F      Brad Marchand             2\n",
-       "2    2012  BOS        F     Shawn Thornton             2\n",
-       "3    2012  CAR        F        Chad LaRose            10\n",
-       "4    2012  CAR        F    Alexander Semin             2\n",
-       "5    2012  CAR        F       Jeff Skinner             5\n",
-       "6    2012  CHI        D     Steve Montador            26\n",
-       "7    2012  CBJ        D   James Wisniewski             2\n",
-       "8    2012  DET        F      Patrick Eaves             1\n",
-       "9    2012  EDM        F          Ben Eager             9\n",
-       "10   2012  FLA        F       Eric Selleck            16\n",
-       "11   2012  FLA        D        Mike Weaver             1\n",
-       "12   2012  MTL        F       René Bourque            21\n",
-       "13   2012  MTL        F  Brendan Gallagher             3\n",
-       "14   2012  MTL        D       Raphael Díaz            25\n",
-       "15   2012  NYR        F       Darroll Powe             3\n",
-       "16   2012  OTT        F  David Dziurzynski             7\n",
-       "17   2012  OTT        D        Mike Lundin             8\n",
-       "18   2012  PHI        F      Daniel Brière            10\n",
-       "19   2012  PHI        F     Wayne Simmonds             3"
+       "     Season          Team Position             Player  Games Missed\n",
+       "0   2012/13        Boston        F   Patrice Bergeron             6\n",
+       "1   2012/13        Boston        F      Brad Marchand             2\n",
+       "2   2012/13        Boston        F     Shawn Thornton             2\n",
+       "3   2012/13      Carolina        F        Chad LaRose            10\n",
+       "4   2012/13      Carolina        F    Alexander Semin             2\n",
+       "5   2012/13      Carolina        F       Jeff Skinner             5\n",
+       "6   2012/13       Chicago        D     Steve Montador            26\n",
+       "7   2012/13      Columbus        D   James Wisniewski             2\n",
+       "8   2012/13       Detroit        F      Patrick Eaves             1\n",
+       "9   2012/13      Edmonton        F          Ben Eager             9\n",
+       "10  2012/13       Florida        F       Eric Selleck            16\n",
+       "11  2012/13       Florida        D        Mike Weaver             1\n",
+       "12  2012/13      Montreal        F       René Bourque            21\n",
+       "13  2012/13      Montreal        F  Brendan Gallagher             3\n",
+       "14  2012/13      Montreal        D       Raphael Díaz            25\n",
+       "15  2012/13    NY Rangers        F       Darroll Powe             3\n",
+       "16  2012/13        Ottawa        F  David Dziurzynski             7\n",
+       "17  2012/13        Ottawa        D        Mike Lundin             8\n",
+       "18  2012/13  Philadelphia        F      Daniel Brière            10\n",
+       "19  2012/13  Philadelphia        F     Wayne Simmonds             3"
       ]
      },
      "execution_count": 19,
@@ -618,6 +618,7 @@
       "text/plain": [
        "F    234\n",
        "D    122\n",
+       "G     48\n",
        "Name: Position, dtype: int64"
       ]
      },
@@ -638,37 +639,38 @@
     {
      "data": {
       "text/plain": [
-       "MTL    27\n",
-       "PIT    27\n",
-       "CAR    26\n",
-       "CHI    25\n",
-       "BOS    21\n",
-       "VAN    16\n",
-       "WPG    15\n",
-       "FLA    15\n",
-       "COL    15\n",
-       "EDM    14\n",
-       "OTT    14\n",
-       "PHI    14\n",
-       "STL    14\n",
-       "NYR    13\n",
-       "TOR    12\n",
-       "ANA     9\n",
-       "MIN     9\n",
-       "DAL     8\n",
-       "DET     8\n",
-       "N.J     8\n",
-       "CBJ     7\n",
-       "NYI     6\n",
-       "BUF     6\n",
-       "S.J     6\n",
-       "ARI     5\n",
-       "CGY     4\n",
-       "L.A     4\n",
-       "WSH     4\n",
-       "NSH     2\n",
-       "T.B     1\n",
-       "VGK     1\n",
+       "Pittsburgh      32\n",
+       "Carolina        31\n",
+       "Montreal        31\n",
+       "Chicago         28\n",
+       "Boston          24\n",
+       "Ottawa          20\n",
+       "Winnipeg        19\n",
+       "Colorado        18\n",
+       "Vancouver       17\n",
+       "Edmonton        15\n",
+       "Florida         15\n",
+       "Philadelphia    15\n",
+       "St. Louis       14\n",
+       "NY Rangers      13\n",
+       "Toronto         13\n",
+       "Anaheim         11\n",
+       "Minnesota       11\n",
+       "Detroit         10\n",
+       "Dallas           9\n",
+       "New Jersey       8\n",
+       "Columbus         8\n",
+       "Buffalo          7\n",
+       "San Jose         7\n",
+       "NY Islanders     6\n",
+       "Calgary          4\n",
+       "Los Angeles      4\n",
+       "Washington       4\n",
+       "Arizona          3\n",
+       "Phoenix          2\n",
+       "Nashville        2\n",
+       "Vegas            2\n",
+       "Tampa Bay        1\n",
        "Name: Team, dtype: int64"
       ]
      },
@@ -742,14 +744,14 @@
        "      <th>Team</th>\n",
        "      <th>Position</th>\n",
        "      <th>Player</th>\n",
-       "      <th>Games_Missed</th>\n",
+       "      <th>Games Missed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2012</td>\n",
-       "      <td>BOS</td>\n",
+       "      <td>Boston</td>\n",
        "      <td>F</td>\n",
        "      <td>Patrice Bergeron</td>\n",
        "      <td>6</td>\n",
@@ -757,7 +759,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2012</td>\n",
-       "      <td>BOS</td>\n",
+       "      <td>Boston</td>\n",
        "      <td>F</td>\n",
        "      <td>Brad Marchand</td>\n",
        "      <td>2</td>\n",
@@ -765,7 +767,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2012</td>\n",
-       "      <td>BOS</td>\n",
+       "      <td>Boston</td>\n",
        "      <td>F</td>\n",
        "      <td>Shawn Thornton</td>\n",
        "      <td>2</td>\n",
@@ -773,7 +775,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2012</td>\n",
-       "      <td>CAR</td>\n",
+       "      <td>Carolina</td>\n",
        "      <td>F</td>\n",
        "      <td>Chad LaRose</td>\n",
        "      <td>10</td>\n",
@@ -781,7 +783,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2012</td>\n",
-       "      <td>CAR</td>\n",
+       "      <td>Carolina</td>\n",
        "      <td>F</td>\n",
        "      <td>Alexander Semin</td>\n",
        "      <td>2</td>\n",
@@ -791,12 +793,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  Season Team Position            Player  Games_Missed\n",
-       "0   2012  BOS        F  Patrice Bergeron             6\n",
-       "1   2012  BOS        F     Brad Marchand             2\n",
-       "2   2012  BOS        F    Shawn Thornton             2\n",
-       "3   2012  CAR        F       Chad LaRose            10\n",
-       "4   2012  CAR        F   Alexander Semin             2"
+       "  Season      Team Position            Player  Games Missed\n",
+       "0   2012    Boston        F  Patrice Bergeron             6\n",
+       "1   2012    Boston        F     Brad Marchand             2\n",
+       "2   2012    Boston        F    Shawn Thornton             2\n",
+       "3   2012  Carolina        F       Chad LaRose            10\n",
+       "4   2012  Carolina        F   Alexander Semin             2"
       ]
      },
      "execution_count": 24,
@@ -851,7 +853,7 @@
        "      <th>Team</th>\n",
        "      <th>Position</th>\n",
        "      <th>Player</th>\n",
-       "      <th>Games_Missed</th>\n",
+       "      <th>Games Missed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -900,7 +902,7 @@
        "</div>"
       ],
       "text/plain": [
-       "  Season Team Position            Player  Games_Missed\n",
+       "  Season Team Position            Player  Games Missed\n",
        "0   2012  BOS        F  Patrice Bergeron             6\n",
        "1   2012  BOS        F     Brad Marchand             2\n",
        "2   2012  BOS        F    Shawn Thornton             2\n",
@@ -1072,7 +1074,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df.to_csv('clean_concussion_data.csv')"
+    "clean_df.to_csv('../Resources/clean_concussion_data.csv')"
    ]
   }
  ],
