--- a/Cleaning/Clean_conc_data.ipynb
+++ b/Cleaning/Clean_conc_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "      <td>Bergeron, Patrice</td>\n",
        "      <td>Concussion</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>365.853659</td>\n",
+       "      <td>365.853658</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
@@ -120,14 +120,14 @@
        "4  2012/13  Carolina        F   Semin, Alexander  Concussion      7.0   \n",
        "\n",
        "         Chip  Games Missed  Games Missed.1  \n",
-       "0  365.853659             6               6  \n",
+       "0  365.853658             6               6  \n",
        "1   60.975610             2               2  \n",
        "2   26.829268             2               2  \n",
        "3  207.317073            10              10  \n",
        "4  170.731707             2               2  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "      <td>2012/13</td>\n",
        "      <td>Montreal</td>\n",
        "      <td>F</td>\n",
-       "      <td>Bourque, René</td>\n",
+       "      <td>Bourque, Rene</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -288,7 +288,7 @@
        "      <td>2012/13</td>\n",
        "      <td>Montreal</td>\n",
        "      <td>D</td>\n",
-       "      <td>Díaz, Raphael</td>\n",
+       "      <td>Diaz, Raphael</td>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -320,7 +320,7 @@
        "      <td>2012/13</td>\n",
        "      <td>Philadelphia</td>\n",
        "      <td>F</td>\n",
-       "      <td>Brière, Daniel</td>\n",
+       "      <td>Briere, Daniel</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -349,17 +349,17 @@
        "9   2012/13      Edmonton        F          Eager, Ben             9\n",
        "10  2012/13       Florida        F       Selleck, Eric            16\n",
        "11  2012/13       Florida        D        Weaver, Mike             1\n",
-       "12  2012/13      Montreal        F       Bourque, René            21\n",
+       "12  2012/13      Montreal        F       Bourque, Rene            21\n",
        "13  2012/13      Montreal        F  Gallagher, Brendan             3\n",
-       "14  2012/13      Montreal        D       Díaz, Raphael            25\n",
+       "14  2012/13      Montreal        D       Diaz, Raphael            25\n",
        "15  2012/13    NY Rangers        F       Powe, Darroll             3\n",
        "16  2012/13        Ottawa        F  Dziurzynski, David             7\n",
        "17  2012/13        Ottawa        D        Lundin, Mike             8\n",
-       "18  2012/13  Philadelphia        F      Brière, Daniel            10\n",
+       "18  2012/13  Philadelphia        F      Briere, Daniel            10\n",
        "19  2012/13  Philadelphia        F     Simmonds, Wayne             3"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "      <td>2012/13</td>\n",
        "      <td>Montreal</td>\n",
        "      <td>F</td>\n",
-       "      <td>René Bourque</td>\n",
+       "      <td>Rene Bourque</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -520,7 +520,7 @@
        "      <td>2012/13</td>\n",
        "      <td>Montreal</td>\n",
        "      <td>D</td>\n",
-       "      <td>Raphael Díaz</td>\n",
+       "      <td>Raphael Diaz</td>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -552,7 +552,7 @@
        "      <td>2012/13</td>\n",
        "      <td>Philadelphia</td>\n",
        "      <td>F</td>\n",
-       "      <td>Daniel Brière</td>\n",
+       "      <td>Daniel Briere</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -581,17 +581,17 @@
        "9   2012/13      Edmonton        F          Ben Eager             9\n",
        "10  2012/13       Florida        F       Eric Selleck            16\n",
        "11  2012/13       Florida        D        Mike Weaver             1\n",
-       "12  2012/13      Montreal        F       René Bourque            21\n",
+       "12  2012/13      Montreal        F       Rene Bourque            21\n",
        "13  2012/13      Montreal        F  Brendan Gallagher             3\n",
-       "14  2012/13      Montreal        D       Raphael Díaz            25\n",
+       "14  2012/13      Montreal        D       Raphael Diaz            25\n",
        "15  2012/13    NY Rangers        F       Darroll Powe             3\n",
        "16  2012/13        Ottawa        F  David Dziurzynski             7\n",
        "17  2012/13        Ottawa        D        Mike Lundin             8\n",
-       "18  2012/13  Philadelphia        F      Daniel Brière            10\n",
+       "18  2012/13  Philadelphia        F      Daniel Briere            10\n",
        "19  2012/13  Philadelphia        F     Wayne Simmonds             3"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "Name: Position, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "Name: Team, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "Name: Position, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "4   2012  Carolina        F   Alexander Semin             2"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
        "4   2012  CAR        F   Alexander Semin             2"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
        "Name: Team, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
        "4   2012  CAR        F   Alexander Semin             2"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
