--- a/Cleaning/players_of_interest.ipynb
+++ b/Cleaning/players_of_interest.ipynb
@@ -1862,6 +1862,15 @@
    "source": [
     "df_final.to_csv(\"../Resources/Players_of_Interest.csv\", index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final.to_json(\"../static/js/data.json\", indent = 2)"
+   ]
   }
  ],
  "metadata": {
