cleaning files and readme

--- a/MachineLearning/SupervisedML.ipynb
+++ b/MachineLearning/SupervisedML.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df = pd.read_csv(\"Resources/ML_player_dataset.csv\")"
+    "new_df = pd.read_csv(\"../Resources/ML_player_dataset.csv\")"
    ]
   },
   {
